<resources>
    <string name="app_name">NeWork</string>
    <string name="events">Events</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="no_events">There are no events.\nIf you create a new event, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="error_remove">Remove error</string>
    <string name="error_like">Like error</string>
    <string name="error_save">Save error</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="update" />
    <string name="newPosts" />
    <string name="save_new_post_menu">save</string>
    <string name="photo_attachment">Photo Attachment</string>
    <string name="description_select_photo" translatable="false">Select photo</string>
    <string name="description_take_photo" translatable="false">Take photo</string>
    <string name="description_photo" translatable="false">Photo</string>
    <string name="remove">REMOVE</string>
    <string name="attachment">Image attachment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="add_avatar">Add Avatar</string>
    <string name="alert_dialog">Sign in (sign up) before adding a new post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_job_yet">The user hasn\'t added any job yet.</string>
    <string name="no_posts_yet">The user doesn\'t have any posts yet</string>
    <string name="wall">Wall</string>
    <string name="start">start</string>
    <string name="finish">finish</string>
    <string name="organization">Organization</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="number">Number</string>
    <string name="id">id</string>

</resources>